--- a/frontend/src/style/food-item-card.css
+++ b/frontend/src/style/food-item-card.css
@@ -41,9 +41,12 @@
     padding-left: 10px;
     padding-right: 10px;
     overflow-x: scroll;
-    background: linear-gradient(45deg, #d0fff8, #ffd7ff);
+    /* background: linear-gradient(45deg, #d0fff8, #ffd7ff); */
+    background-image: linear-gradient(to right, #ffdfdfba, #f0d4ffa6);
     box-shadow: 0 24px 20px -15px #7a3e864f;
     border-radius: 8px;
+    border-left: 10px solid #ffe7e8;
+    border-right: 10px solid #f6e4ff;
     padding-top: 15px;
     padding-bottom: 10px;
 }
@@ -73,7 +76,8 @@
 }
 
 .top-pics-container .item-btn-background{
-    background-color: #e3cda1 !important;
+    /* background-color: #e3cda1 !important; */
+    background-color: black;
     border-radius: 50%;
 }
 
@@ -93,7 +97,7 @@
 .top-pics-container .chevron-right-button,
 .btn-for-scroll .chevron-left-button,
 .btn-for-scroll .chevron-right-button{
-    background-image: linear-gradient(45deg, #cd9eff, #b8eff5);
+    background-image: linear-gradient(45deg, #ffe7e9, #f6e3fd);
     color: rgb(71 45 86)
 }
 .top-pics-item-name{
@@ -333,7 +337,7 @@
     height: 38px;
     padding-top: 5px;
     margin-bottom: 2px;
-    color: #058f00;
+    color: #000000;
     font-weight: 500;
     border: 1px solid #d2d2d2;
     padding-right: 2.1rem;
@@ -342,7 +346,7 @@
     text-align: center;
 }
 .search-input-box, .item-filter-select{
-    background-color: #ffffff;
+    background-color: #f1eaff;
 }
 
 [show-on-cuisine-page='off']{
